// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Nebulas|FeatureHeadline default 1`] = `
.c1 {
  color: #303133;
  font-family: 'Raleway',sans-serif;
  font-weight: 700;
  font-size: 36px;
  line-height: normal;
  margin: 0 0 32px;
}

.c0 {
  padding: 36px;
  width: -webkit-fill-available;
  min-height: -webkit-fill-available;
  background-color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="c0"
  color="white"
>
  <h2
    className="c1"
  >
    FeatureHeadline
  </h2>
</div>
`;

exports[`Storyshots Nebulas|FeatureHeadline inverted 1`] = `
.c0 {
  padding: 36px;
  width: -webkit-fill-available;
  min-height: -webkit-fill-available;
  background-color: #303133;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  color: #FFFFFF;
  font-family: 'Raleway',sans-serif;
  font-weight: 700;
  font-size: 36px;
  line-height: normal;
  margin: 0 0 32px;
}

<div
  className="c0"
  color="black"
>
  <h2
    className="c1"
  >
    FeatureHeadline
  </h2>
</div>
`;
